fix: use webpack for npm dependencies

--- a/src/dev.html
+++ b/src/dev.html
@@ -25,16 +25,18 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
         <!-- FontAwesome-->
-        <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
+        <link href="css/fontawesome.bundle.css" rel="stylesheet" />
         <!-- Bootstrap theme-->
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/bootstrap.bundle.css" rel="stylesheet" />
+        <!-- Bootstrap core JS-->
+        <script src="js/bootstrap.bundle.js"></script>
         <!-- Custom css-->
         <link href="css/custom.css" rel="stylesheet" />
         <!-- Custom logos-->
         <link href="css/logos.css" rel="stylesheet" />
 
-        <script src="node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+        <script src="js/jquery.bundle.js"></script>
+        <script src="js/popper.bundle.js"></script>
 
         <!-- Crowdin widget -->
         <script src="js/crowdin.js"></script>
@@ -131,8 +133,6 @@
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto" id="footer-container"></footer>
-        <!-- Bootstrap core JS-->
-        <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
         <!-- Get navbar -->
         <script src="js/navbar.js"></script>
