--- a/src/discord.html
+++ b/src/discord.html
@@ -25,11 +25,13 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
         <!-- Bootstrap theme-->
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/bootstrap.bundle.css" rel="stylesheet" />
+        <!-- Bootstrap core JS-->
+        <script src="js/bootstrap.bundle.js"></script>
         <!-- Custom css-->
         <link href="css/custom.css" rel="stylesheet" />
 
-        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="js/jquery.bundle.js"></script>
 
         <!-- Crowdin widget -->
         <script src="js/crowdin.js"></script>
@@ -57,8 +59,6 @@
 		</main>
 		<!-- Footer-->
         <footer class="bg-dark py-4 mt-auto" id="footer-container"></footer>
-        <!-- Bootstrap core JS-->
-        <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
         <!-- Get navbar -->
         <script src="js/navbar.js"></script>
