fix/style/use bootstrap 5.3

--- a/support.html
+++ b/support.html
@@ -1,14 +1,13 @@
 ---
 title: Support
 layout: page
-full-width: true
+full-width: false
 css:
   - /assets/css/hide-heading.css
 ---
 
 <section class="py-5" id="Docs">
-    <!-- bs5 no-gutters -> gx-5 -->
-    <div class="row no-gutters justify-content-center">
+    <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
                 <h2 class="fw-bolder">Need support?</h2>
@@ -19,15 +18,13 @@ css:
 
     <!-- Read the Docs -->
     <div class="container mb-5 shadow border-0 card-custom rounded-0">
-        <!-- bs5 no-gutters -> g-0 -->
-        <div class="d-table-row no-gutters">
+        <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
                     <i class="fa-fw fa-solid fa-file-lines"></i>
                 </h1>
             </div>
-            <!-- bs5 border-left -> border-start -->
-            <div class="col-sm-auto border-white my-3 px-3 py-2 border-left">
+            <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
                 <a class="text-decoration-none link-light stretched-link"
                         href="https://docs.lizardbyte.dev/en/latest/about/overview.html"
                         target="_blank">
@@ -35,7 +32,7 @@ css:
                 </a>
                 <p class="card-text">
                     Select projects have the documentation hosted on Read the Docs.
-                    Look for the icon paper on the project cards at our home page.
+                    Look for the paper icon on the project cards at our home page.
                 </p>
                 <p class="card-text mx-3">
                     <small>
@@ -53,8 +50,7 @@ css:
 </section>
 
 <section class="py-5" id="Channels">
-    <!-- bs5 no-gutters -> gx-5 -->
-    <div class="row no-gutters justify-content-center">
+    <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
                 <h2 class="fw-bolder">Need more help?</h2>
@@ -65,15 +61,13 @@ css:
 
     <!-- Discord -->
     <div class="container mb-5 shadow border-0 card-custom rounded-0">
-        <!-- bs5 no-gutters -> g-0 -->
-        <div class="d-table-row no-gutters">
+        <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
                     <i class="fa-fw fab fa-discord"></i>
                 </h1>
             </div>
-            <!-- bs5 border-left -> border-start -->
-            <div class="col-sm-auto border-white my-3 px-3 py-2 border-left">
+            <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
                 <a class="text-decoration-none link-light stretched-link"
                         href="discord">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">Discord</h4>
@@ -98,15 +92,13 @@ css:
 
     <!-- GitHub -->
     <div class="container mb-5 shadow border-0 card-custom rounded-0">
-        <!-- bs5 no-gutters -> g-0 -->
-        <div class="d-table-row no-gutters">
+        <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
                     <i class="fa-fw fab fa-github"></i>
                 </h1>
             </div>
-            <!-- bs5 border-left -> border-start -->
-            <div class="col-sm-auto border-white my-3 px-3 py-2 border-left">
+            <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
                 <a class="text-decoration-none link-light stretched-link"
                         href="https://github.com/orgs/LizardByte/discussions">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">GitHub</h4>
@@ -130,15 +122,13 @@ css:
 
     <!-- Reddit -->
     <div class="container mb-5 shadow border-0 card-custom rounded-0">
-        <!-- bs5 no-gutters -> g-0 -->
-        <div class="d-table-row no-gutters">
+        <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
                     <i class="fa-fw fab fa-reddit-alien"></i>
                 </h1>
             </div>
-            <!-- bs5 border-left -> border-start -->
-            <div class="col-sm-auto border-white my-3 px-3 py-2 border-left">
+            <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
                 <a class="text-decoration-none link-light stretched-link"
                         href="https://www.reddit.com/r/LizardByte" target="_blank">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">Reddit</h4>
