fix(support): contain stretched links

--- a/support.html
+++ b/support.html
@@ -17,7 +17,7 @@ css:
     </div>
 
     <!-- Read the Docs -->
-    <div class="container mb-5 shadow border-0 card-custom rounded-0">
+    <div class="container mb-5 shadow border-0 card-custom rounded-0 position-relative">
         <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
@@ -60,7 +60,7 @@ css:
     </div>
 
     <!-- Discord -->
-    <div class="container mb-5 shadow border-0 card-custom rounded-0">
+    <div class="container mb-5 shadow border-0 card-custom rounded-0 position-relative">
         <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
@@ -91,7 +91,7 @@ css:
     </div>
 
     <!-- GitHub -->
-    <div class="container mb-5 shadow border-0 card-custom rounded-0">
+    <div class="container mb-5 shadow border-0 card-custom rounded-0 position-relative">
         <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
@@ -121,7 +121,7 @@ css:
     </div>
 
     <!-- Reddit -->
-    <div class="container mb-5 shadow border-0 card-custom rounded-0">
+    <div class="container mb-5 shadow border-0 card-custom rounded-0 position-relative">
         <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
