--- a/gamepad-tester.html
+++ b/gamepad-tester.html
@@ -6,8 +6,8 @@ css:
   - /assets/css/hide-heading.css
 ext-js:
   - https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js
+  - https://cdn.jsdelivr.net/npm/@lizardbyte/gamepad-helper@2025.501.232754/dist/gamepad-helper.js
 js:
-  - /assets/js/gamepad-helper.js
   - /assets/js/gamepad-tester.js
 ---
 
@@ -140,7 +140,7 @@ js:
                         <div class="row g-2">
                             <div class="col-6">
                                 <div class="stick-container text-center">
-                                    <h6 class="mb-1">Left Stick</h6>
+                                    <h6 class="mb-1">Left</h6>
                                     <div class="position-relative mx-auto" style="width: 120px; height: 120px; border: 2px solid #555; border-radius: 50%;">
                                         <div id="left-stick-position" class="position-absolute bg-primary" style="width: 16px; height: 16px; border-radius: 50%; transform: translate(-50%, -50%);"></div>
                                         <div class="position-absolute" style="width: 2px; height: 100%; background-color: #555; left: 50%; top: 0;"></div>
@@ -150,7 +150,7 @@ js:
                             </div>
                             <div class="col-6">
                                 <div class="stick-container text-center">
-                                    <h6 class="mb-1">Right Stick</h6>
+                                    <h6 class="mb-1">Right</h6>
                                     <div class="position-relative mx-auto" style="width: 120px; height: 120px; border: 2px solid #555; border-radius: 50%;">
                                         <div id="right-stick-position" class="position-absolute bg-primary" style="width: 16px; height: 16px; border-radius: 50%; transform: translate(-50%, -50%);"></div>
                                         <div class="position-absolute" style="width: 2px; height: 100%; background-color: #555; left: 50%; top: 0;"></div>
