--- a/support.html
+++ b/support.html
@@ -69,7 +69,7 @@ css:
             </div>
             <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
                 <a class="text-decoration-none link-light stretched-link"
-                        href="discord">
+                        href="{{ '/discord' | relative_url }}">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">Discord</h4>
                 </a>
                 <p class="card-text">
