fix(index): update about us section
Updated the feature section in index.html to highlight innovative software, self-hosted solutions, multi-platform support, and performance-driven development. Changed headings, descriptions, background colors, and icons to better reflect the project's focus and offerings.

--- a/index.html
+++ b/index.html
@@ -28,33 +28,32 @@ js:
             <div class="col-lg-8">
                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                     <div class="col mb-5 h-100">
-                        <div class="feature bg-warning bg-gradient mb-3">
+                        <div class="feature bg-primary bg-gradient mb-3">
                             <i class="fa-solid fa-code"></i>
                         </div>
-                        <h3>Open source</h3>
-                        <p class="mb-0">All of our projects are open source.</p>
+                        <h3>Innovative Software</h3>
+                        <p class="mb-0">Building cutting-edge solutions for streaming, media management, and development infrastructure.</p>
                     </div>
                     <div class="col mb-5 h-100">
-                        <div class="feature bg-secondary bg-gradient mb-3">
-                            <i class="fa-fw fa-solid fa-dollar-sign"></i>
+                        <div class="feature bg-info bg-gradient mb-3">
+                            <i class="fa-solid fa-server"></i>
                         </div>
-                        <h3>Free</h3>
-                        <p class="mb-0">Free to use software.</p>
+                        <h3>Self-Hosted Solutions</h3>
+                        <p class="mb-0">Deploy on your own infrastructure with complete control over your data and services.</p>
                     </div>
                     <div class="col mb-5 mb-md-0 h-100">
-                        <div class="feature bg-info bg-gradient mb-3">
-                            <i class="fa-fw fa-solid fa-users"></i>
+                        <div class="feature bg-secondary bg-gradient mb-3">
+                            <i class="fa-solid fa-layer-group"></i>
                         </div>
-                        <h3>Community</h3>
-                        <p class="mb-0">
-                            We are community oriented and our projects are driven by the community.</p>
+                        <h3>Multi-Platform</h3>
+                        <p class="mb-0">Cross-platform support across Windows, Linux, and macOS for maximum flexibility.</p>
                     </div>
                     <div class="col h-100">
-                        <div class="feature bg-primary bg-gradient mb-3">
-                            <i class="fa-lg fa-solid fa-spin fa-arrows-spin"></i>
+                        <div class="feature bg-success bg-gradient mb-3">
+                            <i class="fa-solid fa-gauge-high"></i>
                         </div>
-                        <h3>Continuous Improvement</h3>
-                        <p class="mb-0">We are committed to improving our products.</p>
+                        <h3>Performance Driven</h3>
+                        <p class="mb-0">Engineered for efficiency and reliability with modern development practices.</p>
                     </div>
                 </div>
             </div>
