feat(discord)!: remove discord widget

--- a/discord.html
+++ b/discord.html
@@ -1,22 +1,4 @@
 ---
-title: Discord
-layout: page
-full-width: true
-css:
-  - /assets/css/hide-heading.css
-js:
-  - /assets/js/remove-widgetbot-crate.js
+permalink: /discord/
+redirect_to: 'https://discord.gg/d6MpcrbYQs'
 ---
-
-<section class="crowdin-ignore" id="Discord">
-    <div class="widgetbot">
-        <widgetbot
-            server="804382334370578482"
-            channel="804383092822900797"
-            width=80vw
-            height=70vh
-            >
-        </widgetbot>
-        <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
-    </div>
-</section>
