fix(gamepad-tester): replace dropdowns with buttons

--- a/gamepad-tester.html
+++ b/gamepad-tester.html
@@ -26,11 +26,8 @@ js:
         </div>
 
         <div class="row mb-2" id="gamepad-selector-container" style="display: none;">
-            <div class="col-md-6 mx-auto">
-                <div class="input-group">
-                    <label for="gamepad-selector" class="input-group-text">Gamepad:</label>
-                    <select class="form-select" id="gamepad-selector"></select>
-                </div>
+            <div class="col-12">
+                <div class="d-flex flex-wrap gap-2 justify-content-center" id="gamepad-selector"></div>
             </div>
         </div>
 
