Refactor theme styles and replace hardcoded dark UI
Introduce CSS custom properties and light/dark theme variants, replacing many hardcoded dark colors with variables (styles.scss). Update circular-progress to use theme variables. Add new utility/component classes for license entries, gamepad cards, project links, stick visualization, and raw data styling. Remove inline/background color tweaks and excessive text-white usage from JavaScript (gamepad-tester.js, projects.js, roadmap.js) and update HTML to use the new classes (gamepad-tester.html, licenses.html, _includes/license-entry.html, _includes/support.html). These changes centralize theming, improve maintainability, and enable consistent light/dark styling across the site.

--- a/licenses.html
+++ b/licenses.html
@@ -10,7 +10,7 @@ css:
 
     <p class="lead">This website makes use of the following third-party tools, libraries, and resources.</p>
 
-    <div class="card bg-dark text-white mb-4">
+    <div class="card license-card mb-4">
         <div class="card-header">
             <h5 class="card-title mb-0">Dependencies</h5>
         </div>
