Add theme-aware support links and gamepad icons
Introduce .support-card-link CSS to ensure support page anchors use the correct text and hover colors across themes, and update support.html to apply this class to the support cards instead of the hardcoded link-light class. In assets/js/gamepad-tester.js add a MutationObserver to listen for data-bs-theme changes (reinitializing button images when the theme changes) and select Black/White icon variants based on the current theme so controller button images remain visible in both light and dark modes.

--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@ css:
                 </h1>
             </div>
             <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
-                <a class="text-decoration-none link-light stretched-link"
+                <a class="text-decoration-none support-card-link stretched-link"
                         href="https://docs.lizardbyte.dev/latest/about/overview.html"
                         target="_blank">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">Read the Docs</h4>
@@ -68,7 +68,7 @@ css:
                 </h1>
             </div>
             <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
-                <a class="text-decoration-none link-light stretched-link"
+                <a class="text-decoration-none support-card-link stretched-link"
                         href="{{ '/discord' | relative_url }}">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">Discord</h4>
                 </a>
@@ -99,7 +99,7 @@ css:
                 </h1>
             </div>
             <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
-                <a class="text-decoration-none link-light stretched-link"
+                <a class="text-decoration-none support-card-link stretched-link"
                         href="https://github.com/orgs/LizardByte/discussions">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">GitHub</h4>
                 </a>
@@ -129,7 +129,7 @@ css:
                 </h1>
             </div>
             <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
-                <a class="text-decoration-none link-light stretched-link"
+                <a class="text-decoration-none support-card-link stretched-link"
                         href="https://www.reddit.com/r/LizardByte" target="_blank">
                     <h4 class="card-title mb-3 fw-bolder crowdin-ignore">Reddit</h4>
                 </a>
